By default, dumped AST JSON5 no longer includes `unique_id` values.  (This is
so diffs of debug output that differ only by `unique_id` don't cause tests to
fail.)

Correspondingly, the `-d` and `--debug` command-line options and the `debug`
`set` option now optionally take a `u` argment to re-enable printing
`unique_id` values (that are useful for debugging).

** Dump in JSON5 (really)
The format of the dump output is now (really) in valid JSON5 format.

** More std types
Added more standard types.

** Folded `cast` help
Help for new-style casts has been folded into the same line for C-style casts.

** `type` in `define`
**cdecl** now allows the word `type` to appear in a `define` command, e.g.:

    define PI as pointer to int
    define PI as type pointer to int    // same as above

** Multiple declarations fixes
Declarations like:

    explain bool b, operator!(const S&)
    explain int f(), a[2]

now work.

** Showing `inline namespace` types
Showing `inline namespace` types as gibberish has been fixed.

** Types in error & warning messages
The offending type is now included in error messages.  For example:

    cdecl> explain void f(double d, int x[d])
                                         ^
    31: error: invalid array dimention type "double"; must be integral

If the type is a `typedef`, also prints `aka` followed by its underlying type:

   c++decl> explain std::size_t operator new( std::size_t )
                    ^
   9: error: invalid operator "new" return type "std::size_t" (aka, "unsigned long"); must be "void*"


* Changes in Cdecl 14.4

** `_Alignas` forward declarations
`_Alignas` is now correctly forbidden on forward declarations.

** `auto` with multiple declarators in C
`auto` with multiple declarators is now correctly forbidden in C.

** `auto *p` in C
`auto` with a pointer declarator is now correctly forbidden in C.

** Bit-field `typedef`s for `enum`s
A bit-field of a `typedef` for an `enum` is now correctly forbidden in C:
